# esgit

./: CMakeLists.txt
cmake/modules/: FindLibGit2.cmake
example/: CMakeLists.txt  main.cpp
include/esgit/: Blob.h  Buffer.h  Commit.h  Diff.h  DiffDelta.h  DiffFile.h  DiffHunk.h  DiffLine.h  ESGit.h  Exception.h  Init.h  OId.h  Object.h  Patch.h  Repository.h  RevWalk.h  Signature.h  Tree.h  TreeEntry.h  Util.h
src/: Blob.cpp  Buffer.cpp  CMakeLists.txt  Commit.cpp  Diff.cpp  DiffDelta.cpp  DiffFile.cpp  DiffHunk.cpp  DiffLine.cpp  Exception.cpp  Init.cpp  OId.cpp  Object.cpp  Patch.cpp  Repository.cpp  RevWalk.cpp  Signature.cpp  Tree.cpp  TreeEntry.cpp  Util.cpp
